# DXEntity

./: README.md  pyproject.toml
.github/workflows/: pylint.yml
DXEntity/: __init__.py  _dxentity.py
