[build-system]
    build-backend = "setuptools.build_meta"
    requires = ["setuptools", "setuptools-scm", "wheel"]

[project]
    name = "DXEntity"
    readme = "README.md"
    description = "The DXEntity API return location information for an amateur radio call sign."
    license = {file = "LICENSE.md"}
    version = "0.1.0"
    requires-python = ">=3.10"
    authors = [
        { name = "Fred C." },
    ]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Telecommunications",
        "License :: OSI Approved :: BSD License",
        "Operating System :: MacOS",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
    ]

[project.urls]
    Source = "https://github.com/0x9900/DXEntity"
    Tracker = "https://github.com/0x9900/DXEntity/issues"
